Improved cover images handling for Various Artists. Patch by Tobias Knieper <tobias.knieper@micekiller.de>.

This patch changes the behavior of storing covers of compilations fetched from 
amazon. the covers are now hashed by an empty artist (as they were already 
looked up by findAmazonImage()). This patch does not affect the lookup of 
directory covers.

BUG: 136833

svn path=/trunk/extragear/multimedia/amarok/; revision=612402